assets/css/main.css
/* ... */
.blog-post {
	text-align: left;
	margin-right: 0px;
	font-size: 16px;
}

.blog-post h2 {
	margin-top: 0px;
	font-size: 40px;
	line-height: 50px;
	letter-spacing: 3px;
	text-align: left;
	font-weight: 400;
	width: 100%;
	padding-top: 40px;
	margin-bottom: 20px;
}


.blog-post em {
	text-align: left;
	font-size: 22px;
	color: #767676;	
}

.blog-post i {
	letter-spacing: 10px;
}

.blog-post p {
	margin-bottom: 20px;
}

.blog-post blockquote {
  padding: 0 0 0 15px;
  margin: 0 0 20px;
  border-left: 4px solid #f1c40f;
  color: #a7a7a7;
  font-size: 19px;
}

.blog-post tag {
	color: #a7a7a7;
	font-size: 14px;
	letter-spacing: 2px;
}

.blog-post h4 {
	margin-top: 0px;
	font-size: 19px;
	line-height: 30px;
	letter-spacing: 1px;
	text-align: left;
	font-weight: 700;
}

/* ========== SIDEBAR CONF ========== */

.sidebar-zone {
	padding-top: 40px;
	padding-bottom: 120px;
	margin-bottom: 0px;
}

.sidebar-zone i {
	vertical-align: middle;
}

.sidebar-zone h4 {
	font-weight: 500;
}

.sidebar-zone p {
	font-size: 14px;
}

.sidebar-zone h6 {
	font-weight: 700;
}

.popular-posts { 
	margin: 0px;
	padding-left: 0px;
	}
	
.popular-posts li {
	list-style: none; 
	margin-bottom: 20px; 
	min-height: 70px;
}
.popular-posts li a, 
.popular-posts li a:hover {
	color:#2f2f2f; 
	text-decoration: none;
	}
	
.popular-posts li img {
	float: left; 
	margin-right: 20px;
	}
	
.popular-posts li em {
	font-family: 'Raleway', sans-serif;
	font-size: 12px;
	}

p > tag {
	color:#b1b1b1;
	font-size: 12px;
	font-weight: 500;
}





/* ==========================================================================
   Image Mask
   ========================================================================== */

.grid figure {
	margin: 0;
	position: relative;
}

.grid figure img {
	width: 100%;
	display: block;
	position: relative;
}

.grid figcaption {
	position: absolute;
	top: 0;
	left: 0;
	padding: 20px;
	color: #fff;
	background: #2c3e50;
	font-weight: 700;
}

.grid figcaption h5 {
	margin: 0;
	padding-top: 0px;
	padding-left: 10px;
	padding-bottom: 5px;
	color: #fff;
	text-align: left;
	letter-spacing: 1px;
	
}

.grid figcaption a {
	text-align: left;
	padding: 5px 10px;
	margin-left: 20px;
	display: inline-block;
	background: transparent;
	color: #fff;
	font-size: 13px;
	font-weight: 700;
}

/* Caption Style */
.mask figure {
	overflow: hidden;
}

.mask figure img {
	-webkit-transition: -webkit-transform 0.4s;
	-moz-transition: -moz-transform 0.4s;
	transition: transform 0.4s;
}

.no-touch .mask figure:hover img,
.mask figure.cs-hover img {
	-webkit-transform: translateY(-30px);
	-moz-transform: translateY(-30px);
	-ms-transform: translateY(-30px);
	transform: translateY(-30px);
}

.mask figcaption {
	height: 50px;
	width: 100%;
	top: auto;
	bottom: 0;
	opacity: 0;
	-webkit-transform: translateY(100%);
	-moz-transform: translateY(100%);
	-ms-transform: translateY(100%);
	transform: translateY(100%);
	-webkit-transition: -webkit-transform 0.4s, opacity 0.1s 0.3s;
	-moz-transition: -moz-transform 0.4s, opacity 0.1s 0.3s;
	transition: transform 0.4s, opacity 0.1s 0.3s;
}

.no-touch .mask figure:hover figcaption,
.mask figure.cs-hover figcaption {
	opacity: 1;
	-webkit-transform: translateY(0px);
	-moz-transform: translateY(0px);
	-ms-transform: translateY(0px);
	transform: translateY(0px);
	-webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
	-moz-transition: -moz-transform 0.4s, opacity 0.1s;
	transition: transform 0.4s, opacity 0.1s;
}

.mask figcaption a {
	position: absolute;
	top:10px;
	bottom: 10px;
	right: 30px;
}

/* ==========================================================================
   Pricing Tables
   ========================================================================== */
   
.pricing-option {
    padding-bottom: 40px;
}

.pricing-option .pricing-top {
    position: relative;
    background: #222;
    color: white;
    text-align: center;
    font-weight: bold;

    padding: 40px 20px 30px 20px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.pricing-option .pricing-top .special-label {
    display: block;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background: #f1c40f;
    text-transform: uppercase;
    font-size: 15px;
    font-weight: bold;
    padding: 3px 0;
}

.special .pricing-top {
    background: black;
}

.pricing-option .pricing-edition {
    text-transform: uppercase;
    display: block;
    font-size: 25px;
    letter-spacing: 8px;
}

.pricing-option .price {
    display: inline-block;
    position: relative;
}

.pricing-option .price sup {
    position: absolute;
    top: 50px;
    left: -10px;
    font-size: 24px;
}

.pricing-option .price .price-amount {
    font-size: 108px;
    letter-spacing: -4px;
}

.pricing-option .price small {
    position: relative;
    left: -10px;
    font-size: 18px;
}

.pricing-option ul {
    list-style: none;
    margin: 0;
    background: #eee;
    text-align: center;
    padding-left: 0px;
}

.pricing-option ul li {
    border-bottom: solid 1px #e1e1e1;
    padding-top: 20px;
    padding-bottom: 20px;
}

.pricing-option .pricing-signup {
    display: block;
    text-align: center;
    font-size: 18px;
    font-weight: bold;
    padding: 15px 10px;
    color: white;
    background: #f1c40f;
}

.pricing-option .pricing-signup:hover {
    background: #f39c12;
}



@media screen and (max-width: 400px) {

#db .col-lg-2 {
	padding-left: 20%;
}

}

@media screen and (min-width: 401px) and (max-width: 700px) {

#db .col-lg-2 {
	padding-left: 30%;
}

}

@media screen and (min-width: 700px) and (max-width: 1100px) {

#db .col-lg-2 {
	padding-left: 30%;
}

}


/*  --- new ---- */

@media (max-width: 700px) {
	#mobile-portfolio {
		display: none;
	}
}

div.shadow {
	float:left;
	position: relative;
	height: 245px;
	width: 300px;
	margin: 20px;
	border: 1px solid #ccc;
	padding: 10px;
	background: #777777;
	}
/* ... */

